home , gallery and spons page update 2

--- a/new/gallery.html
+++ b/new/gallery.html
@@ -310,7 +310,7 @@
                         <div class="portfolio others" data-cat="others">
                             <div class="portfolio-wrapper">
                                 <div class="portfolio-hover">
-                                    <div class="image-caption"> <a href="src/img/gallery/img12.jpg" class="label magnefig bg-iit others" data-toggle="tooltip" data-placement="left" title="Zoom"><i class="fa fa-eye"></i></a></div><img src="src/img/gallery/img12.jpg" alt="" /></div>
+                                    <div class="image-caption"> <a href="src/img/gallery/new.jpg" class="label magnefig bg-iit others" data-toggle="tooltip" data-placement="left" title="Zoom"><i class="fa fa-eye"></i></a></div><img src="src/img/gallery/img12.jpg" alt="" /></div>
                             </div>
                         </div>
                         <div class="portfolio others" data-cat="others">
