--- a/new/index.html
+++ b/new/index.html
@@ -132,7 +132,7 @@
 			</div>
 			<div class="row eventDiv borderLine">
 				<div class="col-sm-6 rightBorder eventPad">
-					<p class="eventHeading navbarAnimate">TEAM UPDATES</p>
+					<p class="eventHeading navbarAnimate">UPDATES</p>
 					<p class="eventContent eventContentHeading navbarAnimate" >FS Germany 2018 </p>
 					<p class="eventContent navbarAnimate text-justify">As our next venture, we are planning to participate in Formula Student Germany, which is going to be held in the month of August, 2018. The team is working with its full pace with the introduction of various new concepts in design.</p>
 
@@ -145,12 +145,130 @@
 
 				<div class="col-sm-6 eventPad">
                 <section class="wow fadeInRight col-lg-12 animated" style="padding-bottom: 20px; visibility: visible; animation-name: fadeInRight;" data-wow-animation-name="fadeInRight">
-                    <iframe width="100%" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fiitrms.in%2F%3Ffref%3Dts&amp;tabs=timeline&amp;width=500&amp;height=500&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
+                    <iframe width="100%" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fiitrms.in%2F%3Ffref%3Dts&amp;tabs=timeline&amp;width=500&amp;height=500&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" height="800" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
                 </section>
             </div>
 
 			</div>
-		</div>
+						<!--SPONSORS SLIDER SCRIPT-->
+
+
+					<script src="src/js/jssor.slider-27.1.0.min.js" type="text/javascript"></script>
+    						<script type="text/javascript">
+       				 jssor_1_slider_init = function() {
+
+		            var jssor_1_options = {
+		              $AutoPlay: 1,
+		              $Idle: 0,
+		              $SlideDuration: 5000,
+		              $SlideEasing: $Jease$.$Linear,
+		              $PauseOnHover: 4,
+		              $SlideWidth: 200,
+		              $Align: 0
+		            };
+
+				            var jssor_1_slider = new $JssorSlider$("jssor_1", jssor_1_options);
+
+				            /*#region responsive code begin*/
+
+				            var MAX_WIDTH = 1400;
+
+				            function ScaleSlider() {
+				                var containerElement = jssor_1_slider.$Elmt.parentNode;
+				                var containerWidth = containerElement.clientWidth;
+
+				                if (containerWidth) {
+
+				                    var expectedWidth = Math.min(MAX_WIDTH || containerWidth, containerWidth);
+
+				                    jssor_1_slider.$ScaleWidth(expectedWidth);
+				                }
+				                else {
+				                    window.setTimeout(ScaleSlider, 30);
+				                }
+				            }
+
+				            ScaleSlider();
+
+				            $Jssor$.$AddEvent(window, "load", ScaleSlider);
+				            $Jssor$.$AddEvent(window, "resize", ScaleSlider);
+				            $Jssor$.$AddEvent(window, "orientationchange", ScaleSlider);
+				            /*#endregion responsive code end*/
+				        };
+				    </script>
+				    <style>
+				        /*jssor slider loading skin spin css*/
+				        .jssorl-009-spin img {
+				            animation-name: jssorl-009-spin;
+				            animation-duration: 1.6s;
+				            animation-iteration-count: infinite;
+				            animation-timing-function: linear;
+				        }
+
+				        @keyframes jssorl-009-spin {
+				            from { transform: rotate(0deg); }
+				            to { transform: rotate(360deg); }
+				        }
+				    </style>
+				    <div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:1400px;height:50px;overflow:hidden;visibility:hidden;">
+				        <!-- Loading Screen -->
+				        <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
+				            <img style="margin-top:-19px;position:relative;top:50%;width:40px;height:50px;" src="img/spin.svg" />
+				        </div>
+				        <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1400px;height:50px;overflow:hidden;">
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/mrf.png" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/gl.jpg" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/sw.png" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/wb.png" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/iotrek.png" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/navigus.png" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/motul.png" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/gdl.jpg" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/blc.png" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/sw.png" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/cen.gif" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/phe.png" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/tidc.png" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/enap.jpg" />
+				            </div>
+				            <div data-p="30.00">
+				                <img data-u="image" src="src/img/sponsors/ae.jpg" />
+				            </div>
+				        </div>
+				    </div>
+				    <script type="text/javascript">jssor_1_slider_init();</script>
+				    <!-- #endregion Jssor Slider End 
+				    SPONSOR SLIDER END-->
+
+			
+			</div>
 
 		<footer class="footer" id="contact">
 			<div class="container-fluid">
