--- a/new/sponsors.html
+++ b/new/sponsors.html
@@ -109,21 +109,21 @@
 								<div class="col-sm-4">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage" /></figure>
+										    <figure><a href="https://www.mrftyres.com"><img src="src/img/sponsors/mrf.png"  class="sponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
 								<div class="col-sm-4">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/gl.jpg"  class="sponsorsImage" /></figure>
+										    <figure><a href="http://www.goodluckindia.com"><img src="src/img/sponsors/gl.jpg"  class="sponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
 								<div class="col-sm-4">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/sw.png"  class="sponsorsImage" /></figure>
+										    <figure><a href="http://www.solidworks.in"><img src="src/img/sponsors/sw.png"  class="sponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
@@ -139,28 +139,28 @@
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/mrf.png"  class="sponsorsImage" /></figure>
+										    <figure><a href="https://www.mrftyres.com"><img src="src/img/sponsors/mrf.png" class="goldsponsorsImage sponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/wb.png"  class="sponsorsImage" /></figure>
+										    <figure><a href="http://en.winston-battery.com/"><img src="src/img/sponsors/wb.png"  class="goldsponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/iotrek.png"  class="sponsorsImage" /></figure>
+										    <figure><a href="https://iotrek.io"><img src="src/img/sponsors/iotrek.png"  class="goldsponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/navigus.png"  class="sponsorsImage" /></figure>
+										    <figure><a href="https://navigus.in/"><img src="src/img/sponsors/navigus.png"  class="goldsponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
@@ -171,67 +171,67 @@
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/motul.png"  class="sponsorsImage" /></figure>
+										    <figure><a href="https://www.motul.com/in/en"><img src="src/img/sponsors/motul.png"  class="silversponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/gdl.jpg"  class="sponsorsImage" /></figure>
+										    <figure><a href="http://www.goodluckindia.com"><img src="src/img/sponsors/gdl.jpg"  class="silversponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/blc.png"  class="sponsorsImage" /></figure>
+										    <figure><a href="https://www.indiamart.com/company/4034787"><img src="src/img/sponsors/blc.png"  class="silversponsorsImage" /></figure>
 									    </div>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/sw.png"  class="sponsorsImage" /></figure>
+										    <figure><a href="http://www.solidworks.in"><img src="src/img/sponsors/sw.png"  class="silversponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
 							</div>
 
-							<h1 class="silverspons">BRONZE SPONSORS</h1>
+							<h1 class="bronzespons">BRONZE SPONSORS</h1>
 							<div class="row">
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/cen.gif"  class="sponsorsImage" /></figure>
+										    <figure><a href="http://www.centuryply.com/"><img src="src/img/sponsors/cen.gif"  class="bronzesponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/phe.png"  class="sponsorsImage" /></figure>
+										    <figure><a href="https://www.phoenixcontact.com"><img src="src/img/sponsors/phe.png"  class="bronzesponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/tidc.png"  class="sponsorsImage" /></figure>
+										    <figure><a href="http://www.tidcindia.in/"><img src="src/img/sponsors/tidc.png"  class="bronzesponsorsImage" /></figure>
 									    </div>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/enap.jpg"  class="sponsorsImage" /></figure>
+										    <figure><a href="http://onicspowerresistor.com/"><img src="src/img/sponsors/enap.jpg"  class="bronzesponsorsImage" /></a></figure>
 									    </div>
 									</div>
 								</div>
-								<div class="col-sm-4 col-sm-offset-4">
+								<div class="col-sm-4">
 									<div class="hover08 column">
 									    <div>
-										    <figure><img src="src/img/sponsors/ae.jpg"  class="sponsorsImage ae"/></figure>
+										    <figure><a href="https://www.mrftyres.com"><img src="src/img/sponsors/ae.jpg"  class="bronzesponsorsImage ae AEsponsors"/></figure>
 									    </div>
 									</div>
 								</div>
