team page modified

--- a/new/aerodynamics.html
+++ b/new/aerodynamics.html
@@ -71,7 +71,7 @@
                                         </div>
                                         <div class="col-xs-3">
                                          <div class="imageDiv">
-                                           <img src="src/img/team/.JPG" alt="Avatar" class="personImage">
+                                           <img src="src/img/team/Utkarsh Gupta.JPG" alt="Avatar" class="personImage">
                                            <div class="hoverDiv">
                                              <a href="https://www.facebook.com/utkarsh.gupta.549221" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
                                              <a href="https://www.linkedin.com/in/utkarsh-gupta-ab1220136/" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
