--- a/new/suspension.html
+++ b/new/suspension.html
@@ -54,7 +54,7 @@
                            <div class="container-fluid" style="margin-top:10vh">
                 <div class="row">
                         <div class="col-md-10 col-md-offset-2">
-                                <p class="department">Steering</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
+                                <p class="department">Suspension</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
                                         <div class="col-xs-4">
                                         <div class="imageDiv">
                                            <img src="src/img/team/Chirag Agrawal.JPG" alt="Avatar" class="personImage">
