--- a/new/vehicle.html
+++ b/new/vehicle.html
@@ -71,7 +71,7 @@
                                         </div>
                                         <div class="col-xs-4">
                                                 <div class="imageDiv">
-                                                   <img src="src/img/a.png" alt="Avatar" class="personImage">
+                                                   <img src="src/img/team/Rachit Parikh.JPG" alt="Avatar" class="personImage">
                                                    <div class="hoverDiv">
                                                      <a href="https://www.facebook.com/itachi.uchiha.2016" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
                                                      <a href="https://www.linkedin.com/in/rachit-parikh-264333128/" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
