--- a/new/dataAcquisition.html
+++ b/new/dataAcquisition.html
@@ -50,11 +50,12 @@
                     </div><!-- /.navbar-collapse -->
                   </div><!-- /.container-fluid -->
                 </nav>
+
 <div class="container-fluid" style="margin-top:10vh">
                 <div class="row">
                         <div class="col-md-10 col-md-offset-2">
-                                <p class="department">Data-acquisition</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
-                                <div class="col-xs-2">
+                        <p class="department">Data-acquisition</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
+                                <div class="col-xs-3">
                                         <div class="imageDiv">
                                            <img src="src/img/team/Akshat Pandey.JPG" alt="Avatar" class="personImage">
                                            <div class="hoverDiv">
@@ -63,21 +64,12 @@
                                            </div>
                                            <div class="teamid">
                                            <p class="teamname twoline">Utkarsh Srivastava</p>
-                                           <p class="teampos"></p>
+                                           <p class="teampos">LEADER</p>
                                                    </div>
                                                 </div>
                                  </div>
-                                 <div class="col-xs-3"><br><br><br><br>
-                                 <p class="teamname">LEADER</p>
-                                 </div>
-                              </div>
-                        </div>
-                     </div>
 
-<div class="container-fluid" style="margin-top:10vh">
-                <div class="row">
-                        <div class="col-md-10 col-md-offset-2">
-                                <div class="col-xs-3">
+                                     <div class="col-xs-3">
                                         <div class="imageDiv">
                                            <img src="src/img/team/Amarendra Mishra.JPG" alt="Avatar" class="personImage">
                                            <div class="hoverDiv">
