--- a/new/powertrain.html
+++ b/new/powertrain.html
@@ -56,6 +56,21 @@
                 <div class="row">
                         <div class="col-md-10 col-md-offset-2">
                                 <p class="department">Powertrain</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
+                                <div class="col-xs-3">
+                                        <div class="imageDiv">
+                                           <img src="src/img/team/Ujjwal Gupta.jpg" alt="Avatar" class="personImage">
+                                           <div class="hoverDiv">
+                                             <a href="https://www.facebook.l Guptacom/ujjwal.gupta.37625843" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
+                                             <a href="https://www.linkedin.com/in/ujjwal-gupta-1362a7141/" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
+                                           </div>
+                                           <div class="teamid">
+                                           <p class="teamname twoline">Ujjwal Gupta</p>
+                                           <p class="teampos"></p>
+                                                   </div>
+                                                </div>
+                                        </div>
+                               
+
                                 <div class="col-xs-4">
                                         <div class="imageDiv">
                                            <img src="src/img/team/Pardeep Kumar.JPG" alt="Avatar" class="personImage">
