--- a/new/structural.html
+++ b/new/structural.html
@@ -50,11 +50,11 @@
                     </div><!-- /.navbar-collapse -->
                   </div><!-- /.container-fluid -->
                 </nav>
-<div class="container-fluid" style="margin-top:10vh">
+                <div class="container-fluid" style="margin-top:10vh">
                 <div class="row">
                         <div class="col-md-10 col-md-offset-2">
-                                <p class="department">Structural</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
-                                <div class="col-xs-2">
+                                 <p class="department">Structural</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)"> 
+                                 <div class="col-xs-3">
                                         <div class="imageDiv">
                                            <img src="src/img/team/Nitish kumar - Structural.jpg" alt="Avatar" class="personImage">
                                            <div class="hoverDiv">
@@ -63,21 +63,12 @@
                                            </div>
                                            <div class="teamid">
                                            <p class="teamname">Nitish Kumar</p>
-                                           <p class="teampos"></p>
+                                           <p class="teampos">LEADER</p>
                                                    </div>
                                                 </div>
                                  </div>
-                                 <div class="col-xs-3"><br><br><br><br>
-                                 <p class="teamname">LEADER</p>
-                                 </div>
-                              </div>
-                        </div>
-                     </div>
-                <div class="container-fluid" style="margin-top:10vh">
-                <div class="row">
-                        <div class="col-md-10 col-md-offset-2">
-                                <p class="department"></p><br>
-                                <div class="col-xs-4">
+
+                                <div class="col-xs-3">
                                         <div class="imageDiv">
                                            <img src="src/img/team/Kashish Garg.JPG" alt="Avatar" class="personImage">
                                            <div class="hoverDiv">
@@ -90,7 +81,7 @@
                                                    </div>
                                                 </div>
                                         </div>
-                                        <div class="col-xs-4">
+                                        <div class="col-xs-3">
                                                 <div class="imageDiv">
                                                    <img src="src/img/team/Meghan Patel.JPG" alt="Avatar" class="personImage">
                                                    <div class="hoverDiv">
@@ -103,7 +94,7 @@
                                                    </div>
                                                 </div>
                                         </div>
-<div class="col-xs-4">
+                                        <div class="col-xs-3">
                                                 <div class="imageDiv">
                                                    <img src="src/img/team/Sricharan.JPG" alt="Avatar" class="personImage">
                                                    <div class="hoverDiv">
