--- a/new/vehicleControl.html
+++ b/new/vehicleControl.html
@@ -50,26 +50,21 @@
                     </div><!-- /.navbar-collapse -->
                   </div><!-- /.container-fluid -->
                 </nav>
-<div class="container-fluid" style="margin-top:10vh">
-                <div class="row">
-                        <div class="col-md-10 col-md-offset-2">
-                                <p class="department">Hv-system</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
-                        </div>
-                </div>
-</div>
 
-<div class="container-fluid" style="margin-top:10vh">
+                <div class="container">
+                           <div class="container-fluid" style="margin-top:10vh">
                 <div class="row">
                         <div class="col-md-10 col-md-offset-2">
-                                <div class="col-xs-3">
+                                <p class="department">Material Analysis</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
+                                <div class="col-xs-4">
                                         <div class="imageDiv">
-                                           <img src="src/img/team/Ujjwal Gupta.jpg" alt="Avatar" class="personImage">
+                                           <img src="src/img/team/.JPG" alt="Avatar" class="personImage">
                                            <div class="hoverDiv">
-                                             <a href="https://www.facebook.l Guptacom/ujjwal.gupta.37625843" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
-                                             <a href="https://www.linkedin.com/in/ujjwal-gupta-1362a7141/" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
+                                             <a href="https://www.facebook.com/shivam.chopra.104" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
+                                             <a href="https://www.linkedin.com/in/shivam-chopra-5763b9133" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
                                            </div>
                                            <div class="teamid">
-                                           <p class="teamname twoline">Ujjwal Gupta</p>
+                                           <p class="teamname">Shivam Chopra </p>
                                            <p class="teampos"></p>
                                                    </div>
                                                 </div>
@@ -77,6 +72,8 @@
                                 </div>
                         </div>
                      </div>
+</div>
+</div>
 
 <footer class="footer" id="contact" style="margin-top: 10vh">
                 <div class="container-fluid">
