--- a/new/index.html
+++ b/new/index.html
@@ -23,7 +23,7 @@
 	    <script src="src/js/bootstrap.min.js"></script>
 	    <link href="src/css/index12.css" rel="stylesheet">
 	    <link href="src/css/indexMob2.css" rel="stylesheet">
-	    <link href="themes/4/js-image-slider1.css" rel="stylesheet" type="text/css" />
+	    <link href="themes/4/js-image-slider2.css" rel="stylesheet" type="text/css" />
     <script src="themes/4/js-image-slider.js" type="text/javascript"></script>
     <!-- <link href="src/css/generic.css" rel="stylesheet" type="text/css" /> -->
 	</head>
@@ -127,7 +127,7 @@
 			</div>
 			<div class="row borderLine" >
 				<div class="col-sm-4 col-sm-offset-4 readMoreMainButton navbarAnimate ">
-					<a> READ MORE</a>
+					<a href="about.html">READ MORE</a>
 				</div>
 			</div>
 			<div class="row eventDiv borderLine">
@@ -163,6 +163,11 @@
                 	</div>
                 	<div class="col-sm-3">
                 		<div class="row">
+                			<div class="col-sm-12 readMoreMainButton downloadBrochureButton navbarAnimate ">
+								<a href="about.html">DOWNLOAD BROCHURE</a>
+							</div>
+                		</div>
+                		<div class="row">
 						 	<i class="fa fa-facebook footerSocialIcon" ></i>
 						 	<i class="fa fa-linkedin footerSocialIcon"></i>
 						 	<i class="fa fa-twitter  footerSocialIcon"></i>
@@ -170,9 +175,6 @@
 					 	</div>
                 	</div>
                 </div>
-                       
-					
-				</div>
 			</div>
 		</footer>
 		<script>
