about us corrected

--- a/new/team.html
+++ b/new/team.html
@@ -128,7 +128,7 @@
 						   </div>
 						   <div class="teamid">
 						   <p class="teamname">Atulya Tibrewal</p>
-						   <p class="teampos">Marketting Head</p>
+						   <p class="teampos">Operations and Financial Head</p>
 						   </div>
 						</div>
 					</div>
@@ -180,7 +180,7 @@
                            <div class="col-xs-3">
                               <div>
                                <a href="material.html">  <img src="src/img/a.png" alt="Material Analysis" class="personImage"><br></a>
-                             <div class="teamname"> Material Analysis</div></a>
+                             <div class="teamname"> Materials </div></a>
                               </div>
                            </div>
                            <div class="col-xs-3">
@@ -195,7 +195,7 @@
                         <div class="container-fluid">
                         <div class="row">
                          <div class="col-md-10 col-md-offset-1">
-                         <p class="department">Electrical<span style="float:right;cursor:pointer;"id="flipDownElec">&#9660;</span><span style="float:right;cursor:pointer"id="flipUpElec">&#9650;</span></p><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
+                         <p class="department">Electrical<span style="float:right;cursor:pointer;" id="flipDownElec">&#9660;</span><span style="float:right;cursor:pointer" id="flipUpElec">&#9650;</span></p><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
                          <div id="elecJS">
                            <div class="col-xs-3">
                              <div>
@@ -226,7 +226,7 @@
                   <div class="container-fluid" >
                    <div class="row">
                         <div class="col-md-10 col-md-offset-1">
-                                <p class="department">Marketing<span style="float:right;cursor:pointer;"id="flipDownMarket">&#9660;</span><span style="float:right;cursor:pointer"id="flipUpMarket">&#9650;</span></p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
+                                <p class="department">Operations and Financial<span style="float:right;cursor:pointer;"id="flipDownMarket">&#9660;</span><span style="float:right;cursor:pointer"id="flipUpMarket">&#9650;</span></p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
                                <div id="marketJS">
                                 <div class="col-xs-3">
                                         <div class="imageDiv">
@@ -286,7 +286,7 @@
                       <div class="container-fluid">
                         <div class="row">
                         <div class="col-md-10 col-md-offset-1">
-                                <p class="department">Creative<span style="float:right;cursor:pointer;"id="flipDownCreative">&#9660;</span><span style="float:right;cursor:pointer"id="flipUpCreative">&#9650;</span></p><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
+                                <p class="department">Design<span style="float:right;cursor:pointer;"id="flipDownCreative">&#9660;</span><span style="float:right;cursor:pointer"id="flipUpCreative">&#9650;</span></p><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
                                                <div id="creativeJS">
                                               <div class="col-xs-3">
                                                 <div class="imageDiv">
@@ -309,7 +309,7 @@
                                                      <a href="https://www.linkedin.com/in/shivam-pratap-7b37a1148/" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
                                                    </div>
                                                    <div class="teamid">
-                                                   <p class="teamname">shivam pratap </p>
+                                                   <p class="teamname">Shivam Pratap </p>
                                                    <p class="teampos">Designer</p>
                                                    </div>
                                                 </div>
@@ -380,7 +380,7 @@
                                            <div class="col-md-10">
                      <p class="facultyDetails">Prof Akshay Dvivedi has been a constant source of guidance for the mechanical team of IIT Roorkee Motorsports since 2010. Prof Dvivedi has completed his Ph.D. in Advanced Manufacturing Processes from IIT Roorkee in 2009 and has also won the Outstanding teacher award in 2016. His areas of interest include Advanced Manufacturing Processes, Nontraditional Micro-machining, Metal Matrix Composites, Primary and Secondary Processing of MMC and 
 
-Quality Management. Prof Dvivedi has stood by our side for all these years and for his constant enthusiasm, dedication and support Team IIT Roorkee Motorsports feels honored to have him as our Faculty Advisor.</p>
+Quality Management. Prof Dwivedi has stood by our side for all these years and for his constant enthusiasm, dedication and support Team IIT Roorkee Motorsports feels honored to have him as our Faculty Advisor.</p>
                      </div>
                      <div class="col-md-2">
                       <img src="src/img/team/Akshay Dvivedi.jpg" class="teamImage">
