--- a/new/about.html
+++ b/new/about.html
@@ -84,14 +84,14 @@
 			        <li><a href="sponsors.html">SPONSORS</a></li>
 			        <li><a href="#contact"  class="scrollTo">CONTACT US</a></li>
 			    </ul>
-		    </div><!-- /.navbar-collapse -->
-		  </div><!-- /.container-fluid -->
+		    </div>
+		  </div>
 		</nav>
 		
 		<div class="container-fluid" >
 			<p class="aboutHeading">ABOUT US</p>
 			<div class="row">
-				<div class="col-sm-5">
+				<div class="col-sm-5 aboutSlider">
                     <div class="about-carousel wow fadeInLeft">
                         <div id="myCarousel" class="carousel slide">
                             <div class="carousel-inner">
@@ -118,22 +118,35 @@
 				</div>
 				<div class="col-sm-7">
 					<p class="aboutContent text-justify">
-IIT Roorkee Motorsports is a group of inter-disciplinary students from IIT Roorkee .We participate in the world’s largest Inter–Collegiate Engineering competition conducted by Formula Society of Automotive Engineers, FSAE at 11 locations globally.  
-The competition requires designing, developing and fabricating a formula style open wheeled race car which than further needs to be sold to a hypothetical Firm thus considering the business and marketing aspects of the car and entire project too. The entire process is completed by the students only. The competition consists of static and dynamic events which not only judges the car on the design and engineering basis but also on the business aspects of the projects. 
-The team made its debut in 2011 by participating in FSAE-Australasia held in Melbourne, Australia and currently the team is set to participate in Formula Student Germany, 2018 which will be the team’s 5th Project. 
-These competitions present students with the unique opportunity to develop their skills in technical designing, manufacturing, research work, team management, communication and business operations such as budgeting and market research in a real world environment. The unique combination of real world pressures to meet the deadlines, to design and fabricate a formula style race car and to make it compete at the international level requires a great deal of skills and helps the students build an overall personality while working under great deal of pressure. These skills are very important in the current corporate world and hence the formula students are highly sought after across the corporate sectors especially in engineering mobility industry. 
+						IIT Roorkee Motorsports is a group of inter-disciplinary students from IIT Roorkee. We participate in the world’s largest Inter–Collegiate Engineering competition conducted by Formula Society of Automotive Engineers (FSAE).
+						Our passion is not for the cars alone it is fuelled by our desire to use engineering and technology to change the mobility sector in India.<br/>
+						With the same thrill our seniors started the team in 2009 and made its debut in 2011 by participating in FSAE-Australasia held in Melbourne, Australia with an internal combustion engine car. The Team further participated in Formula student UK - 2013 with a Hybrid Car followed by FSAE - Australasia in 2015 with a fully Electric car. <br/>
+						The team consist of students of different disciplines - Mechanical Engineering, Electrical Engineering, Electronics, Industrial Engineering, and Materials Engineering. Team has different divisions such as Electrical, Mechanical, Marketing & Management and Design & Web Development which works in their respective departments.
 					</p>
+					<h2 class="theVision" >THE VISION</h1>
+					<p class="aboutContent text-justify">To serve as a breeding ground for India’s finest engineers and innovators who shall lead the nation’s technological advancements in the field of electric automobiles.</p>
 				</div>
 			</div>
+			
 			<div class="row">
-				<div class="col-sm-7">
-					<h1 class="competitio col-sm-7" >THE COMPETITION</h1>
-					<p class="compdetails">Formula Student requires designing, developing and fabricating a formula style open-wheeled race car which then further needs to be sold to a hypothetical Firm thus considering the business and marketing aspects of the car and the entire project too. The entire process is completed by the students only. The competition consists of static and dynamic events which not only judges the car on the design and engineering basis but also on the business aspects of the projects. These competitions present students with the unique opportunity to develop their skills in technical designing, manufacturing, research work, team management, communication and business operations such as budgeting and market research in a real-world environment. The unique combination of real-world pressures to meet the deadlines, to design and fabricate a formula-style race car and to make it compete at the international level requires a great deal of skills and helps the students build an overall personality while working under a great deal of pressure. These skills are very important in the current corporate world and hence the formula students are highly sought after across the corporate sectors especially in engineering mobility industry.</p>
+				<div class="col-sm-8">
+					<h1 class="competitio" >THE COMPETITION</h1>
+					<p class="compdetails text-justify">Formula Society of Automotive Engineers (FSAE) is the world’s largest student engineering design competition which enables students with the unique opportunity to develop their skills in technical designing, manufacturing, research work, team management, communication and business operations such as budgeting and market research in a real world environment. The unique combination of real world pressures to meet the deadlines, design, fabricate, assemble, test a formula style race car and to make it compete at the international level requires a great deal of skills and helps the students build an overall personality while working under great deal of pressure. These skills are very important in the current corporate world and hence the formula students are highly sought after across the corporate sectors especially in engineering mobility industry.<br/>
+The Car is judged on the basis of Static and Dynamic events. Static events consist of Design, Cost and Business Presentation which enables student to show their Planning, marketing strategies and overall design of the vehicle. The dynamic events consist of Skid-pad, Acceleration, Autocross, Efficiency and Endurance. This provides teams to directly compete with the design and performance.</p>
 				</div>
-				<div class="col-sm-5">
+				<div class="col-sm-4">
+					<img src="src/img/img1.jpg" class="competitionImage" >
 				</div>
 			</div>	
 		</div>
+		<div class="row">
+				<div class="col-sm-10">
+					
+				</div>
+				<!-- <div class="col-sm-4"> -->
+					<!-- <img src="src/img/img1.jpg" style="height: auto;width: 30vw;margin-top: 16.5vh;margin-bottom: 5vh"> -->
+				<!-- </div> -->
+			</div>	
 		<footer class="footer" id="contact">
 			<div class="container-fluid">
 				<div class="row">
