--- a/new/index.html
+++ b/new/index.html
@@ -287,11 +287,11 @@
                 		<p class="copyright">Copyright &#169; - 2017 Team IIT Roorkee MotorSports </p>
                 	</div>
                 	<div class="col-sm-3">
-                		<div class="row">
+                		<!-- <div class="row">
                 			<div class="col-sm-12 readMoreMainButton downloadBrochureButton navbarAnimate ">
 								<a href="about.html">DOWNLOAD BROCHURE</a>
 							</div>
-                		</div>
+                		</div> -->
                 		<div class="row">
 						 	<i class="fa fa-facebook footerSocialIcon" ></i>
 						 	<i class="fa fa-linkedin footerSocialIcon"></i>
