--- a/new/project.html
+++ b/new/project.html
@@ -113,6 +113,9 @@
         <!--clear above float:left elements. It is required if above #slider is styled as float:left. -->
         <div style="clear:both;height:0;"></div>
     </div>
+	<div id="toggle">
+		"Being the best team among electric cars in India, team IIT ROORKEE MOTORSPORTS showcased it's ability again by building a fully electric car to run across the tracks of FORMULA GREEN 2017 in Coimbatore. SABER due to its unbeatable designing as well as awesome technical support, was able to beat the fastest team in competition by a gap of 31 second in friendly run. Panel was so impressed by its unique aero cooling system, cost effectiveness as well as hard work and dedication of our team that they gave us an HONORARY ENTRY in next Formula Green Competition ."
+	</div>
 
 	<script>
 		
