--- a/new/project.html
+++ b/new/project.html
@@ -91,31 +91,29 @@
         <div id="thumbs">
           <a href="#cars2017">  <div class="thumb">
                 <div class="frame"><img src="src/img/gallery/img1.jpg" /></div>
-                <div class="thumb-content"><p>CAR 2017</p>Thumbnails allows any HTML content</div>
+                <div class="thumb-content"><p>SABER :<br> CAR 2017</p>(FORMULA GREEN'2017)</div>
                 <div style="clear:both;"></div>
             </div></a>
           <a href="#cars2015">  <div class="thumb">
                 <div class="frame"><img src="src/img/gallery/img2.jpg" /></div>
-                <div class="thumb-content"><p>Car 2015</p>Thumbnail style is customizable</div>
+                <div class="thumb-content"><p>BOLT :<br> Car 2015</p>(FSAE Australasia'2015)</div>
                 <div style="clear:both;"></div>
             </div></a>
              <a href="#cars2013"><div class="thumb">
                 <div class="frame"><img src="src/img/gallery/img3.jpg" /></div>
-                <div class="thumb-content" onclick="cars()"><p>Car 2013</p>Just a CSS tweak.</div>
+                <div class="thumb-content" onclick="cars()"><p>Car 2013</p>F1 Racetrack, UK </div>
                 <div style="clear:both;"></div>
             </div></a>
             <div class="thumb">
                 <div class="frame"><img src="src/img/gallery/img4.jpg" /></div>
-                <div class="thumb-content" onclick="cars()"><p>Car 2011</p>Built-in functions for the thumbnails</div>
+                <div class="thumb-content" onclick="cars()"><p>Car 2011</p></div>
                 <div style="clear:both;"></div>
             </div>
         </div>
         <!--clear above float:left elements. It is required if above #slider is styled as float:left. -->
         <div style="clear:both;height:0;"></div>
     </div>
-	<div id="toggle">
-		"Being the best team among electric cars in India, team IIT ROORKEE MOTORSPORTS showcased it's ability again by building a fully electric car to run across the tracks of FORMULA GREEN 2017 in Coimbatore. SABER due to its unbeatable designing as well as awesome technical support, was able to beat the fastest team in competition by a gap of 31 second in friendly run. Panel was so impressed by its unique aero cooling system, cost effectiveness as well as hard work and dedication of our team that they gave us an HONORARY ENTRY in next Formula Green Competition ."
-	</div>
+	
 
 	<script>
 		
