--- a/new/team.html
+++ b/new/team.html
@@ -85,13 +85,12 @@
 					      <div class="hoverDiv">
 					        <a href="https://www.facebook.com/profile.php?id=100010254571933" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
 					        <a href="https://www.linkedin.com/in/harshit-singh-040193107/" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
-					      </div>
+                                           </div>
 					      <div class="teamid">
 					        <p class="teamname">Harshit Singh</p>
 					        <p class="teampos">Team Leader</p>
 					     </div>
-					    </div>
-          </div>
+                                 </div></div>
           <div class="col-xs-3">
 						<div class="imageDiv">
 						   <img src="src/img/team/Aseem Routray.JPG" alt="Avatar" class="personImage">
@@ -133,64 +132,64 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div></div>
                      
                      <br>
                       <div class="container-fluid">
                         <div class="row">
                          <div class="col-md-10 col-md-offset-1">
-                         <p class="department">Mechanical<span style="float:right;cursor:pointer;"id="flipDownMech">&#9660;</span><span style="float:right;cursor:pointer"id="flipUpMech">&#9650;</span></p><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
+                         <p class="department">Mechanical<span style="float:right;cursor:pointer;"id="flipDownMech">&#9660;</span><span style="float:right;cursor:pointer"id="flipUpMech">&#9650;</span></p><hr style="margin-top:0px;border:0.7px solid rgba(0,0,0,0.2)">
                             <div id="mechJS">
                             <div class="col-xs-3 ">
                              <div>
                              <a href="steering.html"><img src="src/img/a.png" alt="steering" class="personImage"><br></a>
-                            <div class="teamname"> Steering</div>
+                            <span style="margin-left:6%;"class="teamname"> Steering</span>
                              </div>
                            </div>
                            <div class="col-xs-3">
                              <div>
                             <a href="suspension.html"><img src="src/img/a.png" alt="suspension" class="personImage" ><br></a>
-                         <div class="teamname"> Suspension</div>
+                         <span style="margin-left:6%;"class="teamname"> Suspension</span>
                              </div>
                            </div>
                            <div class="col-xs-3">
                              <div>
                              <a href="braking.html"><img src="src/img/a.png" alt="braking" class="personImage"><br></a>
-                             <div class="teamname"> Braking</div>
+                             <span  style="margin-left:7%;"style="margin-left:6%;"class="teamname"> Braking</span>
                              </div>
                            </div>
                            <div class="col-xs-3">
                               <div>
                                  <a href="vehicle.html"> <img src="src/img/a.png" alt="Vehicle Dynamics" class="personImage"><br></a>
-                            <div class="teamname"> Vehicle Dynamics</div>
+                            <span  style="margin-left:6%;"class="teamname"> Vehicle Dynamics</span>
                               </div><br><br>
                            </div>
                             <div class="col-xs-3">
                               <div>
                              <a href="structural.html">  <img src="src/img/a.png" alt="Structural" class="personImage"><br></a>
-                            <div class="teamname"> Structural</div>
+                            <span  style="margin-left:6%;"class="teamname"> Structural</span>
                               </div>
                            </div>
                            <div class="col-xs-3">
                               <div>
                                 <a href="aerodynamics.html"> <img src="src/img/a.png" alt="Aerodynamics" class="personImage"><br></a>
-                         <div class="teamname"> Aerodynamics</div>
+                         <span  style="margin-left:6%;"class="teamname"> Aerodynamics</span>
                               </div>
                            </div>
                            <div class="col-xs-3">
                               <div>
                                <a href="material.html">  <img src="src/img/a.png" alt="Material Analysis" class="personImage"><br></a>
-                             <div class="teamname"> Material Analysis</div></a>
+                             <span  style="margin-left:6%;"class="teamname"> Material Analysis</span></a>
                               </div>
                            </div>
                            <div class="col-xs-3">
                               <div>
                                <a href="powertrain.html"> <img src="src/img/a.png" alt="powertrain" class="personImage"><br></a>
-                              <div class="teamname">Powertrain</div>
+                              <span  style="margin-left:6%;"class="teamname">Powertrain</span>
                               </div>
                           </div>
                         </div>
-                        </div></div>
+                        </div></div></div>
                         <br><br>     
                         <div class="container-fluid">
                         <div class="row">
@@ -200,25 +199,25 @@
                            <div class="col-xs-3">
                              <div>
                             <a href="hvsystem.html">  <img src="src/img/a.png" alt="" class="personImage"><br></a>
-                           <div class="teamname"> HV System</div>
+                           <span  style="margin-left:6%;"class="teamname"> HV System</span>
                              </div>
                            </div>
                            <div class="col-xs-3">
                              <div>
                             <a href="lvsystem.html"><img src="src/img/a.png" alt="" class="personImage"><br></a>
-                          <div class="teamname"> LV System</div>
+                          <span  style="margin-left:6%;"class="teamname"> LV System</span>
                              </div>
                            </div>
                            <div class="col-xs-3">
                              <div>
                             <a href="vehicleControl.html"><img src="src/img/a.png" alt="" class="personImage"><br></a>
-                          <div class="teamname">Vehical Control Unit</div>
+                          <span  style="margin-left:6%;"class="teamname">Vehical Control Unit</span>
                              </div>
                              </div>
                            <div class="col-xs-3">
                              <div>
                             <a href="dataAcquisition.html">  <img src="src/img/a.png" alt="braking" class="personImage"><br></a>
-                           <div class="teamname"> Data acquisition</div>
+                           <span  style="margin-left:6%;"class="teamname"> Data acquisition</span>
                              </div>
                            </div>
                           </div></div>
@@ -282,7 +281,7 @@
                                                 </div>
                                         </div>
                                 </div>
-                         <br></div></div>
+                         <br></div></div></div>
                       <div class="container-fluid">
                         <div class="row">
                         <div class="col-md-10 col-md-offset-1">
@@ -370,7 +369,7 @@
                                         </div>
                                                                             </div>
                          <br></div>
-                      </div></div></div>
+                      </div>
                       </div><br><br>
                 <div class="container-fluid">
              
