team page corrected

--- a/new/index.html
+++ b/new/index.html
@@ -184,22 +184,22 @@
                     <div id="owl-demo" class="owl-carousel owl-theme wow fadeIn animated" data-wow-animation-name="fadeIn" style="opacity: 1; display: block; visibility: visible; animation-name: fadeIn;">
                         <div class="owl-wrapper-outer"><div class="owl-wrapper" style="width: 2280px; left: 0px; display: block;"><div class="owl-item" style="width: 285px;"><div class="item view view-tenth"><img src="works/img2017.jpg" alt="work Image">
                             <div class="mask">
-                                <a href="car2017.php" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"><span class="owl-wrapper"></span></i>
+                                <a href="project.html#cars2017" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"><span class="owl-wrapper"></span></i>
                                     <br>2017</a>
                             </div>
                         </div></div><div class="owl-item" style="width: 285px;"><div class="item view view-tenth"><img src="works/img6.jpg" alt="work Image">
                             <div class="mask">
-                                <a href="car2015.php" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"> </i>
+                                <a href="project.html#cars2015" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"> </i>
                                     <br>2015</a>
                             </div>
                         </div></div><div class="owl-item" style="width: 285px;"><div class="item view view-tenth"><img src="works/img2.jpg" alt="work Image">
                             <div class="mask">
-                                <a href="car2013.php" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"> </i>
+                                <a href="project.html#cars2013" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"> </i>
                                     <br>2013</a>
                             </div>
                         </div></div><div class="owl-item" style="width: 285px;"><div class="item view view-tenth"><img src="works/img1.jpg" alt="work Image">
                             <div class="mask">
-                                <a href="car2011.php" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"> </i>
+                                <a href="project.html#cars2011" class="info" data-toggle="tooltip" data-placement="top" title="" data-original-title="Details"> <i class="fa fa-link"> </i>
                                     <br>2011</a>
                             </div>
                         </div></div></div></div>
